--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Quizzer | Test yourself with quizzes</title>
   </head>
   <body>
-    <a href="easy/level/1/quiz/1/">Your first quiz!</a>
+    <a href="easy/">Start with easy!<a>
   </body>
 </html>
