--- a/easy/level/1/quiz/1/index.html
+++ b/easy/level/1/quiz/1/index.html
@@ -1,7 +1,8 @@
 <html>
   <head>
-    <title>Quizzes haven't showed up!</title>
+    <title>Select your first quiz</title>
   </head>
   <body>
+    <a href="html/">HTML</a>
   </body>
 </html>
