Question, not statement
Maybe you’ll select the first answer.

--- a/easy/level/1/quiz/1/html/index.html
+++ b/easy/level/1/quiz/1/html/index.html
@@ -3,7 +3,7 @@
     <title>HTML quiz 1</title>
   </head>
   <body>
-    <h1>What is HTML called</h1>
+    <h1>What is HTML called?</h1>
     <button onclick="correct()">Hypertext Markup Languge</button>
     <button onclick="wrong('1/2/')">Help Tool Marking Languge</button>
     <button onclick="wrong('1/1/')">Hat To Markup Languge</button>
